rename Mate -> Cafe

--- a/AUTHORS
+++ b/AUTHORS
@@ -31,7 +31,7 @@ Luca Ferretti <elle.uca@libero.it>
 Wolfgang Ulbrich <chat-to-me@raveit.de>
   GreenLaguna based on GnomishBeige theme
   Menta based on Zukwito theme
-  BlackMate based on GnomishDark theme
+  BlackCafe based on GnomishDark theme
   TraditionalGreen based on Clearlooks-Phenix theme
 
 Pedram Pourang <tsujan2000@gmail.com>
