--- a/po/hu.po
+++ b/po/hu.po
@@ -37,7 +37,7 @@ msgstr "Egy tiszta sötét téma"
 
 #: desktop-themes/BlueMint/index.theme.in:4
 msgid "BlueMint"
-msgstr "Kék menta"
+msgstr "Kék mint"
 
 #: desktop-themes/BlueMint/index.theme.in:5
 msgid "A clean light theme with blue elements"
