rename Shiny -> Sparkly

--- a/AUTHORS
+++ b/AUTHORS
@@ -49,5 +49,5 @@ Michael Lavers aka kolanos kolanos
   (https://github.com/kolanos/gnome-high-contrast-inverse-theme)
 
 Ambiance 69
-  Shiny GTK3 part part
+  Sparkly GTK3 part part
   (http://gnome-look.org/content/show.php?content=164764)
