--- a/NEWS
+++ b/NEWS
@@ -738,12 +738,12 @@
 ### 1.9.2
   * add ContrastBigInververse GTK3 part
   * more adjustments for GTK3-3.14 in main themes
-  * several improvements in BlackCafe, GreenLagoon and Shiny themes GTK2
+  * several improvements in BlackCafe, GreenLagoon and Sparkly themes GTK2
 
 ### 1.9.1
   * bump version to reflect GTK3 suported version
   * add GTK3-3.14 support for all major themes
-  * add GTK3 part to Shiny 
+  * add GTK3 part to Sparkly 
 
 ### 1.9.0
   * BlueMint: Add GTK 3.12 support
