--- a/NEWS
+++ b/NEWS
@@ -1,756 +1,31 @@
-### 3.22.21 (GTK 3.22)
-
-  * Translations update
-  * scrolledwindows: Remove applet border and background
-  * Mint: sync Mint with BlueMint
-  * Mint: fix button.destructive-action:backdrop state
-  * Mint themes: set arrow color for backdrop state
-  * Mint themes: fix atril text selection color if focus
-  * Mint themes: override backdrop state for clock and menubar applets
-  * Mint Themes: add backdrop state to scrollbars
-  * Mint themes: add a general backdrop state design
-  * Mint themes: add backdrop state to caja and cafe-font-viewer
-  * Mint themes: add backdrop state settings to other-applications.css
-  * Mint themes: fix backdrop borders for suggested-action and default buttons
-  * Mint themes: add images for backdrop state
-  * Mint themes: add backdrop color definitions
-  * Mint themes: add backdrop support for nautilus
-  * most themes: drop index.theme files for metacity huge border themes
-  * Mint themes: Use high resolution window control assets
-  * Mint metacity: fix border size
-  * migrate from intltool to gettext
-
-### 3.22.20 (GTK 3.22)
-
-  * Translations update
-  * GreenLagoon: add selectable metacity theme with borders
-  * BlackCAFE: Restore 1px border metacity theme for the composited case
-  * BlackCAFE: add selectable metacity theme with borders
-  * Undersea: add metacity themes with huge borders
-  * Mint: add selectable metacity theme with borders
-  * Change url project's website
-  * GreenUndersea: use mint icon theme
-  * BlackCAFE: provide enough border to resize windows with recent changes elsewhere
-  * GreenLagoon: add metacity-theme-3.xml version back
-  * include GtkStock icons directly in HCI
-  * all themes: adjustments for headerbars
-  * Update cafe-desktop icon for ContrastBig theme
-  * Remove unused icons
-  * Mint: metacity-3, rounded corners for modal-dialogs
-  * Mint: improve GtkSwitch
-  * Mint: improve metacity-theme-3
-  * mint: GtkSwich, disable on/off characters
-  * Rename gnome-power-manager.png to cafe-power-manager.png
-
-### 3.22.19 (GTK 3.22)
-
-  * Translations update
-  * add Travis-CI support
-  * TOK/TG: fix menubar view for LibreOffice
-  * Mint metacity: synchronize frame_geometry
-  * BlackCAFE: fix invisible checkboxes in Firefox content when userChrome.css is used
-  * Trad. and Mint themes: fix menu accelerator
-  * undersea: fix font-color headerbar button.default
-  * Trad. and GreenLagoon: fix lightdm-gtk panel
-
-### 3.22.18 (GTK 3.22)
-
-  * Translations update
-  * Mint/Undersea: fix backdrop/focus state with gnome-disk-utility
-  * undersea: reduce button radius
-  * undersea: fix headerbar backdrop state button jumping
-  * some themes: drop styling for eom sidebar buttons
-  * undersea: give emoji-picker popup a nicer look
-  * undersea: few fixes for buttons in titlebar and popovers
-  * undersea: fix font color in lightdm-settings
-  * highcontrast: Use normal titlebar size for utility windows
-  * all themes: add a thiny border to the panel
-  * undersea: fix borders in filechooser placessidebar
-
-### 3.22.17 (GTK 3.22)
-
-  * Translations update
-  * undersea: drop double border of scrollbar sliders
-  * Undersea: some border fixes for caja notebook
-  * all themes: xrandr-applet menu styling
-  * Undersea/GreenLagoon: fix bg of foo-scroll-area
-  * Mint themes: fix background size for windows-control icons
-  * all themes: Cafe Panel: Fix align with CheckBoxes in applet popup menu
-  * Mint themes: use icons with best resolution
-  * BigContrast: use HC icon-theme
-  * Fix more BigContrast themes visibility with metacity
-  * BigContrast: Rework colors
-  * TOK: "menu > menuitem" instead "menu menuitem"
-  * Update default cursor size
-  * TOK/TG: Fix: checkboxes and radio buttons are little and blurry
-  * Fix BigContrast themes visibility with metacity
-  * use BigContrastInverse theme from gtk+
-
-### 3.22.16 (GTK 3.22)
-
-  * Mint themes: use black cursor theme
-  * BlackCAFE: Fix for Google Chrome/Chromium
-  * BlackCAFE: Fix some runtime warnings
-  * add black cursor theme
-  * cursor theme: use HIDIPI cursors
-  * All themes: some improvements for WebKitGtk2
-  * Trad themes: don't draw a gradient background for the panel
-  * Most themes: don't write a background for vala-panel-appmenu
-  * Undersea themes: drop light borders from multiload-applet
-  * HCI: add missing settings for multimedia OSD
-  * Classic themes: fix osd progressbar color
-  * Mint themes: fix osd progressbar color
-
-### 3.22.15 (GTK 3.22)
-
-  * Translations update
-  * Undersea themes: remove a box-shadow at engrampa toolbar
-  * undersea themes: remove padding from caja-sidebar treeview
-  * all themes caja: remove right-border from scrolledwindow.frame
-  * Mint metacity themes: remove left/right-border for maximised windows
-  * BlackCAFE: write the border on scrollbar trough
-  * all themes: remove right-border from scrolledwindow.frame
-  * undersea themes: fix fg color of button.suggested-action in headerbars
-  * BlackCAFE: Workaround for Yelp/Lireoffice/Firefox scrollbar issue
-  * Revert "Gtk+-3.20 all themes: fix redraw issue with yelp"
-
-### 3.22.14 (GTK 3.22)
-
-  * Translations update
-  * TOK/TG: sliders: keep the original size
-  * Gtk+-3.20 undersea: reduce border radius for treeview.selected/hover in sidebars
-  * Gtk+-3.20 undersea: set font color for spinbutton entry
-  * Gtk+-3.20 undersea themes: fix a jumpin button in headerbar of gitg
-  * Gtk+-3.20 undersea themes: setup dnd for caja-icon-view
-  * Gtk+-3.20 T. themes: fix double border in cafe-volume-control notebook
-  * Gtk+-3.20 Undersea themes: fix focus state of lapiz-statusbar-button
-  * Gtk+-3.20 Most themes: style menuitem accelerator hover
-  * All themes: change syntax for loading panel-grid image for cafe-1.20
-  * Gtk+-3.20 undersea themes: set top borderradius for .titlebar > headerbar
-  * Gtk+-3.20 Most Themes: fix padding of primary/secondary image in GtkEntry
-  * Gtk+-3.20 TRAD themes: fix color of grey-out arrows in menus
-  * TOK/TG: add menuitem radio mixed
-  * TOK/TG menuitems: checkboxes and radio buttons redesigned
-  * Gtk+-3.20 most themes: fix GtkScale slider mouse-selection if slider is out of range
-  * Gtk+-3.20 all themes: fix redraw issue with yelp
-
-
-### 3.22.13 (GTK 3.22)
-
-  * Translations update
-  * Gtk+-3.20 GreenLagoon: some menu fixes
-  * Gtk+-3.20 Mint themes: add transition effect for menu arrows
-  * Gtk+-3.20 Mint themes: drop settings for firefox menus
-  * Gtk+-3.20 undersea themes: drop transition effect from labels
-  * Add index.theme file for gtk+ High Contrast theme
-  * Gtk+-3.20 Most themes: setup border for clockmap in clock applet
-  * Gtk+-3.20 Undersea themes: some fixes for clock applet
-  * Gtk+-3.20 BlackCafe: some panel clock fixes
-  * TOK/TG: caja: solid color to the notebook header border
-  * Gtk+-3.20 Mint themes: use a hardcoded bg color for tooltips
-  * BlackCAFE: CSD apps-match noncomposited headerbar to square window border
-
-### 3.22.12 (GTK 3.22)
-
-  * BlackCAFE: more CSD app fixes
-  * BlackCAFE fixes for CSD apps
-  * sync with transifex
-  * Gtk+-3.20 Mint themes: change colors for panel applet buttons
-  * Gtk+-3.20 Mint themes: change transition timining for menubar menuitem
-  * Gtk+-3.20 Mint themes: use normal menubar menuitems styling for the panel
-  * Gtk+-3.20 Mint themes: remove transition effect from menuitems
-  * TOK/TG: cafe-terminal: solid color to the notebook header border
-  * Gtk+-3.20 BlackCAFE: fix fontcolor in url bar of google chrome
-  * Gtk+-3.20 BlackCAFE: change menuitem accelerator font color
-  * TOK/TG: xfce4-terminal: solid color to the notebook header border
-  * TOK/TG: Remove gradient from notebook header
-  * Restore Polish translation credits from GNOME
-  * cursor: add color-picker to make file
-  * Gtk+-3.20 Undersea themes: improve lapiz sidebar
-  * Gtk+-3.20 undersea themes: fix fg color in lapiz error dialogs
-
-### 3.22.11 (GTK 3.22)
-
-  * Translations update
-  * BlackCAFE: fully style noncomposited m-s-d OSD
-  * BlackCAFE: support new msd-osd-window-solid style class for non-composited OSD case
-  * BlackCAFE: make caja renaming labels more readable
-  * ContrastBigInverse: Fix Caja rename labels when theme actually applied
-  * cursor: add color-picker cursor image
-  * GTK+-3.20 undersea themes: improve cafe- and mintmenu
-  * Gtk+-3.20 mint themes: fixes for cafe- and mint-menu
-  * Gtk+-3.20 Classic themes: improve some dialog windows
-  * Classic themes: don't draw a bg for cafe-indicator-applet
-  * Gtk+-3.20 most themes: fix bg color in list-view of caja inactive-pane
-  * Gtk+-3.20 all themes: add new css name cafekbd-keyboard-drawing
-  * metacity undersea themes: fix innerborder if metacity or compiz WM is used
-  * TOK/TG: xfce4-terminal: gradient color to the notebook header border
-  * TOK/TG: make padding in notebook tabs 2 pixels bigger
-
-### 3.22.10 (GTK 3.22)
-
-  * mint-fix "{{" typo breaking gtk-widgets.css file
-  * All themes: Fix: print dialog paper depictions not appearing correctly
-
-### 3.22.9 (GTK 3.22)
-
-  * Gtk+-3.20 Mint themes: don't make any different between backdrop and normal state
-  * Gtk+-3.20 most themes: cafe-panel hide button modification
-  * TOK/TG: caja: set gradient color to the notebook header border
-  * Gtk+-3.20 undersea themes: cafe-panel hide button modifications
-  * TOK/TG: Fixes borders in xfce4-terminal tabs and probably more applications
-  * Gtk+-3.20 all themes: improvements for cafe-menu
-  * Gtk+-3.20 all themes: better way to style keyboard layouts
-  * TOK/TG: cafe-terminal: set gradient color to the notebook header border
-  * Gtk+-3.20 Classic: set color to the notebook header border in cafe-terminal
-  * Gtk+-3.20 Mint themes: sort cafe-applications.css
-  * Mint themes: set color to the notebook header border
-  * TOK/TG: New colors in panel grid
-  * Gtk+-3.20 all themes: style cafe-keyboard-layout-viewer
-  * Classic themes - use applet handles from Mint
-
-### 3.22.8 (GTK 3.22)
-
-  * TOK/TG: cafe-terminal: use border in header tab instead notebook
-  * Fix distcheck
-  * Gtk+-3.20 ContrastBigInverse: add missing assets to avoid a runtime warning
-  * Mint themes: eliminate wrong border-color for lockscreen
-  * Gtk+-3.20 undersea: eliminate wrong border-color for lockscreen
-  * GreenLagoon: correct notebook tab borders in cafe-terminal
-  * Undersea themes: correct notebook tab borders in cafe-terminal
-  * Gtk+-3.20 Mint themes: correct notebook header borders in cafe-terminal
-  * GreenUndersea: fix a typo
-  * Classic themes: drop some lines in cafe-terminal for a better look
-  * Translations update
-  * Gtk+-3.20 Most themes: don't use a border for terminal notebook
-  * Classic themes: print dialog improvements
-  * Classic themes: set notebook borders for pavu-control (better fix)
-  * Classic themes: set notebook borders for pavu-control
-  * Gtk+-3.20 GreenLagoon: style scrollbar junction
-  * Gtk+-3.20: add an annoying wildcard for firefox
-  * Gtk+-3.20 GreenLagoon: some border fixes for caja sidebar
-  * Gtk+-3.20 GreenLagoon: change border color of GtkSwitch
-  * Gtk+-3.20 GreenLagoon: change border-color for scrollbars
-  * GTK+-3.20 GreenLagoon: change insensitive_bg_color
-  * Gtk+-3.20 GreenLagoon: improve notebooks
-  * Classic themes: drop the two useless lines in the notebooks
-  * Gtk+-3.20 GreenLagoon: re-work  borders of frame and other improvements
-  * GreenLagoon metacity: increase border size
-  * Undersea metacity: increase border size
-  * Gtk+-3.20 Undersea: set color for dim-labels at list rows
-  * Classic themes: set more border colors in checked notebook tabs
-  * Gtk+-3.20 undersea themes set a padding on statusbars
-  * Gtk+-3.20: fix jumping button in cafe-font-viewer toolbar
-  * Gtk+-3.20 undersea themes: improve headerbars and popover menus
-  * Gtk+-3.20 undersea themes: set a padding for gedit statusbar
-  * Gtk+-3.20 Mint themes: add missing border-image for button.fat:checked in filezilla and atril
-  * Gtk+-3.20 Mint themes: some notebook improvements
-  * Fixed URL colors for Firefox search suggestions
-  * Gtk+-3.20 Mint themes: re-work borders for frames and other improvements (mega commit)
-  * Classic themes: make padding in notebook tabs smaller
-  * Gtk+-3.20 undersea themes: several improvements
-  * Gtk+-3.22 Undersea themes: some notebook improvements
-  * Gtk+-3.22 Undersea themes: re-work borders for frames
-  * Gtk+-3.20 Undersea themes: fix previous commit for rubberband
-  * Gtk+-3.20 undersea themes: fix rubberband for cafe-screenshot
-  * TOK theme: fix a typo
-  * Gtk+-3.20 undersea themes: fix toolbar label color
-  * Classic themes: use gradient color on active tabs
-  * Gtk+-2.0 Greenlaguna: use hardcoded hex colors in gtkrc
-  * Gtk+-2.0 most themes: use a oneliner for color definitions in gtkrc
-  * Classic themes: add a border-image for some applets
-  * Gtk+-3.20 Classic themes: use a border for the whole GtkInfobar
-  * Gtk+-3.20 Classic themes: workaround, fix some borders in firefox
-  * Gtk+-3.20 Classic themes: fix jumping combobox button
-  * Gtk+-3.20 most themes: fix sidebar of GtkAssistant
-  * Gtk+-3.20 Undersea themes: fix sidebar of GtkAssistant
-  * Gtk+-3 all themes: don't set NaTrayApplet-icon-size
-
-### 3.22.7 (GTK 3.22)
-
-  * GTK+-3.20 Undersea themes: increase systray margins by 1 pixel to avoid deformed icons
-  * GTK+-3.20 Mint themes: increase systray margins by 1 pixel to avoid deformed icons
-  * GTK+-3.20 Mint themes: use normal font weighting for panel main menu labels
-  * GTK+-3.22 Classic themes: fix panel applet slider
-  * GTK+-3.20 Classic themes: rework GtkNotebook
-  * GTK+-3.20 Classic themes: fix border-radius of dialog-action-area linked single button
-  * GTK+-3.20 Undersea themes: fix border-radius of dialog-action-area linked single button
-  * GTK+-3.20 Undersea themes: more outline fixes
-  * BlackCAFE: Fix disappearing focus of flat buttons
-
-### 3.22.6 (GTK 3.22)
-
-  * Translations update
-  * GTK+-3.20 GreenLagoon: enable outlines
-  * GTK+-3.20 TG theme: enable outlines and some focus fixes
-  * GTK+-3.20 TOK theme: enable outlines and some focus fixes
-  * GTK+-3.20 BlackCAFE: enable focus highlights and outlines
-  * Gtk+-3.20 Undersea themes: enable outlines and some focus fixes
-  * GTK+-3.20 Mint themes: enable outlines and some focus fixes
-  * GTK+-3.20 undersea themes: use a border for scrolledwindows in preferences dialog windows
-
-### 3.22.5 (GTK 3.22)
-
-  * Translations update
-  * Most themes: add cinnamon-3.2 support
-  * gtk+-3 GreenLagoon: style m-s-d osd in non compositor case
-  * gtk+-3 Mint themes: style m-s-d osd in non compositor case
-  * Undersea themes: style m-s-d osd in non compositor case
-  * GTK+-3.20 Classic Green: remove borders from css node frame
-  * GTK+-3.20 TOK themes: remove borders from css node frame
-
-### 3.22.4 (GTK 3.22)
-
-  * Translations update
-  * GTK+-3.22 undersea themes: setup dconf-editor
-  * GTK+-3.20 BlackCafe: start fixing wrong syntax for 3.20
-  * GTK+-3.20 Most themes: fix remaining wrong syntax for 3.20
-  * Most themes: Specify a monospace font family
-  * GTK3.22  BlackCAFE Specify a monospace font family
-  * GTK+-3.20 Mint themes: support lightdm-greeter-2.0
-  * GTK+-3.20 undersea themes: adjust colors for lightdm style
-  * GTK+-3.20 undersea themes: use a dark style for lock-dialog from screensaver
-  * Most themes: gray out images in disabled buttons and menuitems
-  * GTK+-3.20 Undersea themes: a few adjustments for cafe-menu
-  * Gtk+-3.20 TOK themes: cafe-panel, adjust padding for main menu
-  * GTK+-3.20 Undersea themes: drop non working box-shadow for lightdm login_window
-  * GTK+-3.20 most themes: adjust fg color of days in GtkCalendar
-  * Gtk+-3.20 Undersea themes: improve GtkCalendar for clock applet
-  * GTK+-3.20 TOK themes: adjust error/warnings settings for evolution
-
-### 3.22.3 (GTK 3.22)
-
-  * Translations update
-  * Gtk+-3.22 Undersea themes: add lightdm-greeter-2.0.0 settings
-  * Gtk+-3.22 ContrastBigInverse: fix deprecations
-  * metacity Mint themes: darken title fg color for unfocused windows
-  * metacity Mint themes: draw a thin black border line for maximize windows
-  * Gtk+-3.20 GreenLagoon: fix disabled menuitems not grayed out
-  * Gtk+-3.20 Undersea themes: use a dark style for lightdm
-  * GTK 3.22 BlackCafe: fix disabled menu items not grayed out
-  * GTK+-3.20 Green-Undersea: fix panel styling
-
-### 3.22.2 (GTK 3.22)
-
-  * Translations update
-  * GTK+-3.20 all themes: add background-image to the ruberband style class
-  * GTK+-3 Undersea themes: fix jumping pathbar toggle button
-  * GTK+-3.20 TOK themes: improvements for GtkNotebook
-  * GTK+-3.20 GreenLagoon: improvements for GtkNotebook
-  * GTK+-3.20 Mint themes: GtkNotebook improvements
-  * GTK+-3.20 Undersea themes: GtkNotebook improvements and more
-  * GTK+-3.20 TOK themes: fix tabs in cafe-terminal
-  * GTK+-3.20 Mint themes: fix tabs in cafe-terminal
-
-
-### 3.22.1 (GTK 3.22)
-
-  * Translations update
-  * GTK+-3.20 TOK themes: remove notebook border color for pavu-control
-  * GTK+-3.20 GreenLagoon: remove notebook border color for pavu-control
-  * GTK+-3.20 Undersea themes: remove notebook border color for pavu-control
-  * GTK+-3.20 Mint themes: remove notebook border color for pavu-control
-  * Gtk+-3.20 undersea themes: change pathbar settings in caja to follow latest changes in master
-  * Gtk+-3.20 Mint themes: change pathbar settings in caja to follow latest changes in master
-  * GTK+-3.20 most themes: fix fg color of treeview.trough if selected
-  * GTK+-3.20 GreenLagoon: style treeview progressbar
-  * GTK+-3.20 TOK themes: style treeview progressbar
-  * GTK+-3.20 undersea themes: style treeview progressbar
-  * GTK+-3.20 Mint themes: style treeview progressbars
-  * GTK+-3.20 BlackCAFE: fix treeview progressbars
-  * GTK+-3.20 TOK themes: style pavu-control
-  * GTK+-3.20 GreenLagoon: style pavu-control
-  * Gtk+-3.20 Undersea themes: style pavu-control
-  * GTK+-3.20 Mint themes: style pavu-control
-  * GTK+-3.20 Mint and Undersea: minor icon size correction for na-tray-applet
-  * GTK+-3.20 all themes: use "%" units instead of of hardcoded values for font-size
-  * GTK+-3.20 Undersea themes: fix notebook tabs in atril annotation sidebar
-
-### 3.22.0 (GTK 3.22)
-
-  * Translations update
-  * GTK+-3.22 BlackCAFE: Fix font warning
-  * GTK+-3.22 TOK themes: fix deprecacted 'one color stop with linear-gradient' and fonts setiings
-  * GTK+-3.22 GreenLagoon: fix deprecacted 'one color stop with linear-gradient' and fonts setiings
-  * GTK+-3.22 Undersea themes: fix deprecacted 'one color stop with linear-gradient' and fonts setiings
-  * GTK+-3.22 Mint themes: fix deprecated one color stop with linear-gradient()
-  * GTK+-3.22 Mint themes: fix font deprecations
-  * GTK+-3.22 BlackCAFE: fix font, deprecation errors
-
-### 3.20.9 (GTK 3.20)
-
-  * Translations update
-  * GTK+-3.20 most themes: add support for OSD mediakeys windows
-  * GTK+-3.20 TOK themes: kill a unwanted border on nemo desktop window
-  * GTK+-3.20 TOK themes: use same colors for text selection in atril if window isn't focused
-  * GTK+-3.20 BlackCAFE: fix broken text selection in atril
-  * GTK+-3 TOK themes: fix hover fg color in combobox menu
-  * GTK+-3.20 most themes: use node 'paper' for GtkPrintUnixDialog
-  * GTK+-3.20 most themes: fix text selection in atril
-  * GTK+-3.20 BlackCAFE: Fix "paper" widget in print dialogs
-  * GTK+-3.20 undersea themes: fixes for atril toolbar, caja and cafe-keyboard-properties
-  * GTK+-3.20 Mint themes: fix wrong bg color of notebook in wifi password dialog, nm-applet
-  * GTK+-3.20 TOK themes: fix wrong bg color of notebook in wifi password dialog, nm-applet
-  * GTK+-3.20 Undersea themes: fix wrong bg color of notebook in wifi password dialog, nm-applet
-  * GTK+-3.20 BlackCAFE: fix wrong bg color of notebook in wifi password dialog, nm-applet
-  * GTK+-3.20 BlackCAFE: consistant panel menus
-  * GTK+-3.20 BlackCAFE: fix panel right-click menu size
-  * Mint themes metacity: increase border size
-  * Mint themes metacity: adjust buttons for frame_geometry normal
-  * GTK+-3.20 BlackCAFE: fix Firefox scrollbar sliders
-
-### 3.20.8 (GTK 3.20)
-
-  * GTK+-3.20 TOK themes: adjust nemo pathbar
-  * GTK+-3.20 TOK themes: fix GtkScale API breakage with stable gtk+
-  * BlackCAFE: support new MSD OSD style class
-  * GTK+-3.20 most themes: fix bg color of scrolledwindow junction in nemo treeview
-  * BigContrast metacity: fix color of of buttons
-  * GTK+-3.20 Undersea themes: fix pathbar in nemo
-  * GTK+-3.20 GreenLagoon: adjust OSD spinbutton
-  * GTK+-3.20 GreenLagoon: fix GtkScale API breakage with stable gtk+
-  * GTK+-3.20 Undersea themes: adjust spinbuttons and OSD spinbuttons in colorchooser
-  * GTK+-3.20 Undersea themeses: fix GtkScale API breakage with stable gtk+
-  * GTK+-3-20 Green-Undersea: darken menuitem arrow hover color
-  * GTK+-3-20 Green-Undersea: some color correction for panel applets
-  * GTK+-3.20 Undersea themes: fix hover fg color of panel menubar
-  * GTK+-3.20 BlackCafe: a few adjustments for caja + clean up of cafe-applications
-    caja combobox views
-    sidebar scrollbar button
-    drop old selectors from nautilus
-    drop non ported stuff
-    use right selectors for na-tray applet
-  * GTK+-3.20 Mint themes: increase font-weight for panel menubar
-  * GTK+-3.20 Mint themes: fix nemo pathbar
-  * GTK+-3.20 Mint themes: reduce height of treeviews
-  * GTK+-3.20 Mint themes: fix GtkScale API breakage with stable gtk+
-  * GTK+-3 BlueMint: add missing scale_trough_border color definition
-  * Mint themes metacity: fix button geometry for all windows
-  * BlackCAFE :use a text shadow on cafe-panel
-  * GTK+-3.20 Undersea themes: use a text-shadow for cafe-panel
-  * GTK+-3.20 Undersea themes: add icon-shadow to GtkExpander and shadows for image and label of clock-applet
-  * GTK+-3.20 Mint themes: fix tooltips for WM decoration and firefox
-  * GTK+-3.20 Mint themes: improve GtkCalendar and GtkExpander
-  * GTK+-3.20 Undersea themes: improve GtkCalendar and use a transparent bg for clock applet
-  * GTK+-3.20 GreenLagoon: improve settings for GtkCalendar and GtkExpander
-  * GTK+-3.20 TOK themes: improve GtkCalendar settings
-  * GTK+-3.20 Undersea and Grenlaguna themes: fix node for vte-terminal
-  * Gtk+-3.20 most themes: fix some menu separators
-  * GTK+-3.20 GreenLagoon: add setting for better controling icon size in na-tray-applet
-  * GTK+-3.20 mint themes: add setting for better controling icon size in na-tray-applet
-  * GTK+-3.20 undersea themes: fix settings for na-tray-applet
-
-### 3.20.7 (GTK 3.20)
-
-  * Translations update
-  * GTK+-3.20 all themes: add settings for yumex-dnf
-  * GTK+-3.20 BlackCAFE: fix wrong stackswitcher node
-  * GTK+-3.20 Undersea themes: fix scrollbar bg in firefox websites
-  * GTK+-3.20 BlackCAFE: add simple support for spinbuttons and OSD spinbuttons
-  * GTK+-3.20 BlackCAFE: some more corrections for 3.20
-  * GTK+-3.20 BlackCafe: adjust list row syntax for 3.20
-  * GTK+-3.20 BlackCAFE: fix OSD settings
-  * GTK+-3.20 Blackcafe: fix headerbar and .titlebar
-  * GTK+-3.20 GreenLagoon: fix fg color of firefox tooltips
-  * GTK+-3.20 GreenLagoon: style meld and buttons in infobar
-  * GTK+-3.20 GreenLagoon: adjust button_gradient_color_b color
-  * GTK+-3.20 Undersea themes: adjust hover fg color in primary-toolbars
-  * GTK+-3.20 Green-Undersea: style meld preferences
-  * GTK+-3.20 Undersea themes: style meld preferences
-  * GTK+-3.20 Mint themes: style meld
-  * GTK+-3.20 Undersea themes: more styling for meld
-  * GTK+-3.20 Undersea themes: add settings for meld + button bg adjustments
-  * GTK+-3.20 some themes: style UI tab of cafe-appearance-properties
-  * GTK+-3.20 TOK themes: adjust menu arrows
-  * GTK+-3.20 GreenLagoon: edited makefile
-  * GTK+-3.20 GreenLagoon: adjust check and radio buttons for menus
-  * GTK+-3.20 Undersea themes: adjust check and radio buttons
-  * GTk+-3.20 Undersea themes: adjust scrollbars for firefox
-  * GTk+-3.20 GreenLagoon: adjust scrollbars for firefox
-  * GTK+-3.20 Undersea themes: adjust scrollbars for firefox
-  * GTK+-3.20 Mint themes: adjust scrollbars for firefox
-  * GreenLagoon metacity: remove borders from max window
-  * Undersea themes metacity: remove borders from max window
-  * BlackCAFE metacity: remove borders from max window
-  * Mint themes: add metacity-theme-2.xml file
-  * GTK+-3.20 TOK themes: make preview windows in wnckpager more visible
-  * GTK+-3.20 GreenLagoon: make preview windows in wnckpager more visible
-  * GTK+-3.20 Mint themes: make preview windows in wnckpager more visible
-  * GTK+-3.20 TOK themes: style printdialog
-  * GTK+-3.20 GreenLagoon: style printdialog
-  * GTK+-3.20 Mint themes: style printdialog
-  * GTK+-3.20 Undersea themes: style printdialog notebook + fix fg color of combobox cellview
-  * GTK+-3.20 BlackCafe: apply window-control theme to gedit
-
-### 3.20.6 (GTK 3.20)
-
-  * GTK+-3.20 BlackCAFE: adjust tooltips
-  * GTK+-3.20 TOK themes: adjust tooltips
-  * GTK+-3.20 ContrastBigInverse: adjust tooltips
-  * GTK+-3.20 GreenLagoon: re-work tooltips
-  * GTK+-3.20 undersea themes: re-work tooltip settings, fixes firefox tooltips
-  * GTK+-3.20 TOK themes: adjustments for headerbars, placesidebar and placesview
-  * GTK+-3.20 Undersea themes: adjust headerbars
-  * GTK+-3.20 Mint themes: adjust headerbar settings for gedit
-  * GTK+-3.20 BlackCafe: Fix Gedit headerbar buttons
-  * GTK+-3.20 BlackCafe: fix incorrect headerbar selector
-  * GTK+-3.20 BlackCafe: more Firefox fixes
-  * GTK+-3.20 BlackCafe: Fix check and radio buttons in Firefox GTK3 website content
-  * GTK+-3.20 TOK themes: fix check and radio buttons for firefox
-  * GTK+-3.20 GreenLagoon: fix check and radio boxes for firefox
-  * GTK+-3.20 BlackCafe: fix check and radio boxes in firefox
-  * GTK+-3.20 Mint themes: fix for check and radio boxes in firefox
-  * GTK+-3.20 BlackCafe: use origin border-radius for trough and progress
-  * GTK+-3.20 BlackCafe: don't set insensitive colors as a general setting
-  * GTK+-3.20 BlackCafe little adjustement for scrollbars
-  * GTK+-3.20 BlackCafe: re-work menus
-  * GTK+-3.20 BlackCafe: fix some general parameter
-  * GTK+-3.20 BlackCafe: use a padding for menubar menuitem from cafe-panel
-  * GTK+-3.20 BlackCafe: fix fg color of text selection in firefox
-  * GTK+-3.20 Undersea themes: more adjustments for gtk+-3.20
-  * GTK+-3.20 Mint themes: more adjustments for gtk+-3.20
-  * GTK+-3.20 TOK themes: rework menus and fix issue with arrows on firefox menus
-  * GTK+-3.20 GreenLagoon: use the LSD effect on popover arrows
-  * GTK+-3.20 GreenLagoon: some button size correction
-  * Enable build of GreenLagoon again
-  * Mint themes: improve metacity-3.xml version
-  * GTK+-3.20 GreenLagoon: port to gtk+-3.20
-  * GTK+-3.20 TOK themes: style nemo-preferences dialog
-  * GTK+-3.20 TOK themes: add stack-switcher support
-  * GTK+-3.20 TOK themes: some corrections for scrolledwindow and primary-toolbar button
-  * GTK+-3.20 BlackCAFE: Correct bg of active treeview cells
-  * GTK+-3.20 BlackCAFE: match stacksidebar to placessidebar
-  * GTK+-3.20 TOK themes: some improvements for filechooser dialog window
-  * GTK+-3.18 TOK themes: fix button jummping in spinbuttons of color selection
-  * GTK+-3.20 TOK themes: remove the scrollbar color from scrolledwindow
-  * GTK+-3.20 all themes: fix text selection in firefox
-
-### 3.20.5 (GTK 3.20)
-
-  * add new languages an sync with transiflex
-  * GTK+-3.20 TOK themes: adjust linked buttons for rhythmbox and nemo
-  * GTK+-3.20 TOK themes: OSD and inline-bar fixes for parole and gnome-weather
-  * GTK+-3.20 Mint themes: correct some fg colors in gnome-weather-pages
-  * GTK+-3.20 Mint themes: fix fg color of flat buttons in rhythmbox
-  * Fix Changelog generation
-  * GTK+-3.20 BlackCafe: style lock-screen
-  * GTK+-3-20 traditional themes: style lock-screen
-  * GTK+-3.20 TOK themes: adjust linked buttons for rhythmbox and nemo
-  * GTK+-3.20 TOK themes: OSD and inline-bar fixes for parole and gnome-weather
-  * GTK+-3.20 Mint themes: correct some fg colors in gnome-weather-pages
-  * GTK+-3.20 Mint themes: fix fg color of flat buttons in rhythmbox
-  * Gtk+-3.20 ContrastBigInverse: fix notebook bg color of the look-screen
-  * GTK+-3.20 Mint themes: style cafe-screensaver lock-screen
-  * GTK+-3.20 undersea themes: style cafe-screensaver lock-screen
-  * GTK+-3.20 undersea themes: fix jumping buttons in parole-mediaplayer inline-toolbar
-  * GTK+-3.20 undersea themes: adjust OSD, gnome-weather, rhythmbox
-    and cleanup gnome-applications
-  * GTK+-3.20 undersea themes: fix button color in meld toolbar + toolbar cleanup
-  * GTK+-3.20 Mint themes: reduce border-radius of panel buttons
-  * GTK+-3.20 BlackCafe: Fix non-composited CSD windows
-  * GTK+-3.20 BlackCafe: adjust window-controls settings
-  * GTK+-3.20 BlackCafe: use Cafe logo as spinner animation
-  * GTK+-3.20 Undersea themes: simplify linked path-bar
-  * GTK 3.20 BlackCafe: correct for recent cafe-panel changes
-  * ship a BigContrast metacity-theme-1.xml
-  * drop ContrastBig theme, gtk+ ship that already
-
-
-### 3.20.4 (GTK 3.20)
-
-  * GTK+-3.20 Mint themes: add styling for cafe-mixer GUI
-  * GTK+-3.20 Mint themes: reduce size of menubars and menuitems
-  * GTK+-3.20 Mint themes: reduce size of reduce size of actionbar
-  * GTK+-3.20 Mint themes: fix buttons in rhythmbox
-  * GTK+-3.20 Mint themes: adjust GtkColorScale
-  * GTK3.20 Mint themes: simplify combobox and caja settings
-  * GTK3.20 Mint themes: reduce height of sidbar treeview
-  * GTK3.20: Mint themes: adjust treeviews
-  * GTK+-3.20 Mint themes: fix combobox, spinbutton and switch in list rows
-    this make elements in cinnamon-setting visible
-  * GTK+-3.20 Mint themes: file-browser pathbar adjustments + increase size of rows + clean up
-  * GTK+-3.20 Mint themes: adjust notebooks settings
-  * GTK+-3.20 branch: make GreanLagoon optional (not default)
-  * GTK+-3.20 high contrast themes: finished port to 3.20
-  * GTK3-3.20 traditional themes: button state cleanup + fix size of nemos buttons
-  * GTK+-3.20 traditional themes: adjust GtkScale and GtkColorScale
-  * GTK+-3.20 traditional themes: adjust width of scrollbars
-  * GTK+-3.20 traditional themes: adjust comboboxes
-  * GTK+-3.20 traditional themes: fix treeview header button
-  * GTK+-3.20 traditional themes: fix jumping pathbar buttons
-  * GTK+-3.20 Undersea themes: improve nemo pathbar settings
-  * GTK+-3.20 Undersea themes: adjustements for nemo and cinnamon-settings
-  * GTK+-3.20 Undersea themes: adjust GtkColorScale
-  * GTK+-3.20 Undersea themes: adjust combobox, rows, treeviews,
-    inline-toolbar and nautilus pathbar
-  * GTK+-3.20 Undersea themes: adjust caja and lapiz
-  * GTK+-3.20 Undersea themes: adjust notebooks
-  * GTk+-3.20 most themes: fix text bg of credits in GtkAbout windows
-  * GTK+-3.20 all themes:update wnckpager to follow latest cafe-panel changes
-
-### 3.20.3 (GTK 3.20)
-
-  * GTK3: fix Scrollbars, Spinbutton and Notebooks in Mint themes,
-  * Undersea themes and Classic themes.
-  * more improvements
-  * language update
-
-### 3.20.2 (GTK 3.20)
-
-  * port Mint to gtk+-3.20
-  * port ClassicOK to gtk+-3.20
-  * port ClassicGreen to gtk+-3.20
-  * more adjustments for Blue-Undersea for gtk+-3.20
-  * sync Green-Undersea with Blue-Undersea
-
-### 3.20.1 (GTK 3.20)
-
-  * port Blue-Undersea to gtk+-3.20
-
-### 3.20.0 (GTK 3.20)
-
-  * port BlueMint to gtk+-3.20
-  * port BlackCAFE to gtk+-3.20
-  * port GreenUndersea to gtk+-3.20
-
-### 1.12.2 (GTK 3.18)
-
-  * GTK3 GreenLagoon: fix padding osd-toolbar volume button
-  * GTK3 undersea themes: fix padding osd-toolbar volume button
-  * Gtk+-3.14/16 undersea themes: fix padding of .app-notification .button:hover
-  * GTK3 BlackCafe: fix padding osd-toolbar volume button
-  * GTK3 BlackCafe: fix padding of .app-notification .button:hover
-  * GTK3 undersea themes: re-work caja styling
-  * GTK3 BlackCafe: adjust notebook tabs
-  * GTK3 GreenLagoon: adjust notebook tabs
-  * GTK3 undersea themes: reduce hight of notebook tabs
-  * GTK3 undersea themes: adjust notebook tabs in lapiz text area
-  * GTK3 undersea themes: change border color in GtkNotebook
-  * GTK3: undersea themes: fix padding for GtkToggleButton.button:hover
-  * GTK3 black-cafe, green-laguna: button size fix for gnome-mplayer
-  * GTK3: undersea themes: adjustments for some media players + vitual-manager
-  * Gtk+-3.18 mint themes: improve previous GtkFileChooser pathbar commit
-  * Gtk3 mint themes: adjust nemo toolbar again
-  * Gtk+-3.18 most themes: workaround for broken first/last-child logic with
-    linked buttons in GtkFileChooser pathbar
-  * GTK3 Mint themes: use a border-image for nemo statusbar buttons
-  * GTK3 Mint themes: reduce vertical size of nemo primary toolbar
-  * Gtk+-3.18 most themes: workaround for broken first/last-child logic with
-    linked buttons in pathbar with gtk+-3.18
-  * GTK3: Mint themes: fix cafe-panel separator background
-  * GTK3: BlackCAFE, GreenLagoon: fix Nautilus desktop window background transparency
-
-### 1.12.1 (GTK 3.18)
-
-  * add emerald themes for Undersea themes
-  * add emerald theme for BlueMint/Mint
-  * GTK3 all themes: adjust cafe-panel-applet-slider style class
-  * Gtk3 most themes: adjust panel to follow latest changes in cafe-panel
-  * some more improvements, see git log
-
-### 1.12.0 (GTK 3.18)
-
-  * GTK3 all themes: style volume/brightness applet slider
-
-### 1.11.1 (GTK 3.18)
-  * GTK+-3.18 most themes: fix bg of GtkGrid in GtkAboutDialog
-  * Gtk+-3.18 all themes: fix sidebar list-rows in GtkFileChooserWidget
-  * Gtk+-3.18 green-undersea theme: fix some typos
-
-### 1.11.0 (GTK 3.18)
-  * more adjustments for gtk+-3.18
-  * GTK3 undersea themes: add styling for gnome-weather
-  * GTK3 Undersea themes: adjust osd toolbar
-  * GTK3 Undersea themes: adjust popover scales
-  * GTK3 Undersea themes: style background of emblem page in properties-dialog
-  * GTK3 Undersea themes: re-work cleanup button state logic
-  * Gtk+-3.18 undersea themes: adjust osd
-  * Gtk3 Contrast High themes: support real OSD
-  * GTK3 ContrastBig themes: adjust GtkScale and GtkProgressbar
-  * GTK3: ContrastBig themes: style dconf-editor
-
-### 1.10.5 (GTK 3.18)
-  * more adjustments for gtk+-3.18
-  * list-rows
-  * osd-scale popup
-  * all gtk3
-  * fix padding-area of icons in na-tray
-  * full transparent panel for BlackCafe and GreenLagoon
-  * improvements for all themes
-  * details see git log
-
-### 1.10.4 (GTK 3.18)
-  * first adjustments for gtk+-3.18
-  * adjust sidebar in GtkFileChooser dialog
-  * style popover suggested-action button
-  * adjust link_color and add styling for hyperlinks
-  * all themes: style bg of toolbar editor
-  * style dialog windows
-  * add new style classes settings for ContrastBig themes
-  * restore progressbars for traditional themes
-  * improvements for traditional themes
-  * BlackCAFE: re-work caja styling a bit
-  * improvements for BlackCAFE theme
-  * improvements for Greenlaguna theme
-  * undersea themes: don't use dark colors for math calculators
-  * improvements for undersea themes
-  * improvements for mint themes
-  * for more details see git log!
-
-### 1.10.3 (GTK 3.16)
-  * fix some metacity themes
-  * improve traditional themes (gk3)
-
-### 1.10.2
-  * add Blue-Undersea and Green-Undersea themes
-  * style parole mediaplayer (gtk3 version)
-
-### 1.10.1
-  * improvements for mint themes GTK+-3.16
-  * re-work of GreenLagoon GTK3
-  * improvements for traditional themes GTK+-3.16
-  * improvements for BlackCafe GTK+-3.16
-  * more styling for cafe GTK3 applications
-  * add a whitlist for window-controls menu-close button for csd apps
-  * use cafe logo for spinner animation
-
-### 1.10.0
-  * adjustments for GTK3-3.16
-  * a lot of improvements for cafe GTK3 applications
-  * disable usage of symbolic icons
-  * use regular icons for window controls
-  * disable spinner animation to avoid high cpu load
-  * enable window shadows for csd applications
-  * re-work of GreenLagoon
-  * re-work of ContrastBig themes
-  * many more adjustments....
-
-### 1.9.3
-  * ClassicOKTest is installable with normal configure flags
-  * add transition effect to buttons and menuitems for Mint themes GTK3
-  * add transition effect to buttons and menuitems for BlackCafe and GreenLagoon GTK3
-  * add support for CSD applications in BlackCafe and GreenLagoon
-  * improve handling of CSD applications in other themes
-  * add support for popovers in GreenLagoon, BlackCafe, ContrastBig and ContrastBigInverse themes
-  * improve popovers support in Classic themes
-  * serveral other improvements
-
-### 1.9.2
-  * add ContrastBigInververse GTK3 part
-  * more adjustments for GTK3-3.14 in main themes
-  * several improvements in BlackCafe, GreenLagoon and Sparkly themes GTK2
-
-### 1.9.1
-  * bump version to reflect GTK3 suported version
-  * add GTK3-3.14 support for all major themes
-  * add GTK3 part to Sparkly 
-
-### 1.9.0
-  * BlueMint: Add GTK 3.12 support
-  * Mint: Add GTK 3.12 support
-  * BlackCAFE: Add GTK 3.12 support
-  * GreenLagoon: Add GTK 3.12 support
-
-### 1.8.0
-  * Import Crux Metacity theme and rename it to Quid
-  * Add BlueMint theme
+### cafe-themes 1.25.0
+
+  * mate-themes 3.22.21 fork
+  * ci: enable Github Actions
+  * rename MATE -> CAFE
+  * rename ContrastHigh -> ContrastBig
+  * rename Submarine -> Undersea
+  * rename Menta -> Mint
+  * rename Laguna -> Lagoon
+  * rename HighContrast -> BigContrast
+  * rename Shiny -> Sparkly
+  * rename Traditional -> Classic
+  * ClassicOk: add ctk support
+  * add FUNDING.yml
+  * Classic themes: set 'border-right-width: 0px;' if window is maximized
+  * Classic themes: cafe-terminal: scrollbar with border-width 1px
+  * Classic themes: Fix the scrollbar in more applications
+  * Classic themes: add border-right-width to scrollbar maximized
+  * Classic themes: fix treeview inside scrolledwindow in atril and caja
+  * Classic themes: add an alternative fix for scrolledwindow
+  * Classic Green: add ctk support
+  * rename Pluma -> Lapiz
+  * BlackCAFE: add ctk support
+  * Blue-Undersea: add ctk support
+  * BlueMint: add ctk support
+  * Green-Undersea: add ctk support
+  * GreenLagoon: add ctk support
+  * Mint: add ctk support
+  * po: update translations
+  * po: remove obsolete translations
+  * add makepot script
