rename Marco -> Croma

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,10 +10,10 @@ Calum Benson <calum.benson@sun.com>
 Seth Nickell <snickell@stanford.edu>
 
 Dave Camp <campd@ximian.com>
-  Mist GTK & Marco
+  Mist GTK & Croma
 
 Tuomas Kuosmanen <tigert@gimp.org> 
-  Default Marco, icons, gtk
+  Default Croma, icons, gtk
 
 Jakub 'jimmac' Steiner <jimmac at ximian dot com> 
   Default icons, Smokey-Blue|Red icons
@@ -22,7 +22,7 @@ Susan Kare
   Mist (aka 'Flat-Blue') icons, Sandy icons
 
 Arlo Rose
-  Crux icons, GTK, & Marco
+  Crux icons, GTK, & Croma
 
 Jakub Stainer <jimmac@novell.com>
 Luca Ferretti <elle.uca@libero.it>
